# Taix

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README-en.md  README.md  Taix.sln  release_notes.txt
.github/workflows/: release.yml  test-aot.yml
Core/: AppState.cs  Core.csproj
Core/Enums/: CultureCode.cs
Core/Event/: BrowserObserverEventHandler.cs  EventHandler.cs  ObserverEventHandler.cs  WebServerEventHandler.cs
Core/Librarys/: FileHelper.cs  Iconer.cs  ProcessHelper.cs  RegexHelper.cs  Shortcut.cs  SiteCache.cs  Time.cs
Core/Migrations/: 20241113032236_InitialCreate.Designer.cs  20241113032236_InitialCreate.cs  20241216161349_InitialCreate.Designer.cs  20241216161349_InitialCreate.cs  TaiDbContextModelSnapshot.cs
Core/Models/: AppModel.cs  CategoryModel.cs  DailyLogModel.cs  HoursLogModel.cs
Infrastructure/Enums/: AppType.cs  SleepStatus.cs
Infrastructure/Event/: AppActiveChangedEventArgs.cs  AppDurationUpdatedEventArgs.cs  AppObserverEventHandler.cs  AppTimerEventHandler.cs  EventHandler.cs  ObserverEventHandler.cs
Infrastructure/Librarys/: Logger.cs  PlatformInfo.cs
Infrastructure/Servicers/: IAppManager.cs  IAppObserver.cs  IPlatformInitializer.cs  ISleepdiscover.cs  ISystemCommon.cs  IWindowManager.cs
Platform/Linux/: Linux.csproj  X11.cs  XAppManager.cs  XAppObserver.cs  XManager.cs  XPlatformInitializer.cs  XSleepdiscover.cs  XSystemInfrastructure.cs  Xlib.cs
Platform/Win/: Win.csproj  Win32API.cs  WinAppManager.cs  WinAppObserver.cs  WinPlatformInitializer.cs  WinSleepdiscover.cs  WinSystemInfrastructure.cs  WindowManager.cs
Server/: Program.cs  Server.csproj  Worker.cs
SharedLibrary/: ResourceStrings.cs  SharedLibrary.csproj  SystemLanguage.cs
SharedLibrary/Enums/: AppType.cs  BrowserType.cs  CultureCode.cs  SleepStatus.cs  WebPageInfoType.cs
SharedLibrary/Event/: AppActiveChangedEventArgs.cs  AppDurationUpdatedEventArgs.cs  AppObserverEventHandler.cs  AppTimerEventHandler.cs  EventHandler.cs  ObserverEventHandler.cs
SharedLibrary/Librarys/: Logger.cs  PlatformInfo.cs
SharedLibrary/Servicers/: IAppManager.cs  IAppObserver.cs  IPlatformInitializer.cs  ISleepdiscover.cs  ISystemCommon.cs  ISystemInfrastructure.cs  IWindowManager.cs
Taix.Client/: App.axaml  App.axaml.cs  AppServiceProvider.cs  ClientJsonContext.cs  Program.cs  ResourceStrings.cs  ServiceLocator.cs  StateData.cs  SystemLanguage.cs  Taix.Client.csproj  TrimmerRoots.xml
Taix.Client/Behaviors/: PopupScrollDismissBehavior.cs  ScrollTabSyncBehavior.cs
Taix.Client/Controls/: PageContainer.cs  ScrollSectionNavigator.cs  TPage.cs
Taix.Client/Events/: AppChangeType.cs  AppChangedEvent.cs  AppEventService.cs  IAppEventService.cs  WebSiteChangedEvent.cs
Taix.Client/Extensions/: ListExtensions.cs
Taix.Client/Librarys/: ChartDataMapper.cs
Taix.Client/Logging/: FileLogger.cs  FileLoggerOptions.cs  ILogger.cs  Logger.cs
Taix.Client/Models/: CategoryAppListPageModel.cs  CategoryPageModel.cs  CategoryWebSiteListPageModel.cs  ChartPageModel.cs  ConnectionStatus.cs  DataPageModel.cs  DetailPageModel.cs  IndexPageModel.cs  MainWindowModel.cs  ModelBase.cs  SettingPageModel.cs  SidebarModel.cs  UINotifyPropertyChanged.cs  WebSiteDetailPageModel.cs
Taix.Client/PageState/: PageStateAttributes.cs
Taix.Client/Platform/: PlatformConstants.cs  PlatformHelper.cs
Taix.Client/Servicers/: AppContextMenuServicer.cs  AppUpdateService.cs  ClipboardService.cs  ContextMenuServicer.cs  IAppContextMenuServicer.cs  IAppUpdateService.cs  (+13 more)
Taix.PageState.Generator/: PageStateGenerator.cs  Taix.PageState.Generator.csproj
TaixBug/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  TaixBug.csproj  app.manifest
UI/: App.axaml  App.axaml.cs  Program.cs  ResourceStrings.cs  ServiceLocator.cs  StateData.cs  SystemLanguage.cs  UI.csproj  ViewLocator.cs
script/: extract_font_subset.py  install.ps1  organize-publish.ps1  pack-velopack.ps1  shortcuts.bat  uninstall.bat  uninstall.ps1
scripts/: extract_font_subset.py
taix-browser-extension/: background.js  manifest.json  package-lock.json  package.json  tsconfig.json
taix-installer/: Cargo.toml  build-dmg.sh  build-installer.ps1  build-installer.sh  build.rs
taix-installer/frontend/: index.html
taix-installer/resources/: taix-installer.exe.manifest  taix-installer.rc
taix-installer/src/: i18n.rs  install.rs  main.rs  sfx.rs  update.rs
taix-installer/src/gui/: mod.rs
taix-installer/src/platform/: macos.rs  mod.rs  windows.rs
taix-installer/src/ui/: cli.rs
taix-logging/: Cargo.toml
taix-logging/src/: lib.rs
taix-monitor-macos/: .gitignore  Package.swift
taix-monitor-windows/: .gitignore  Cargo.toml  config.json
taix-monitor-windows/src/: app_manager.rs  app_observer.rs  app_timer.rs  config.rs  logging.rs  main.rs  models.rs  runner.rs  scheduler.rs  sleep_detector.rs  window_manager.rs
taix-monitor-windows/src/transport/: client.rs  mod.rs  pipe.rs  queue.rs
taix-monitor-windows/src/win32/: audio.rs  gamepad.rs  mod.rs  power_watcher.rs  process.rs  window.rs
taix-server/: .gitignore  Cargo.toml
taix-server/src/: constants.rs  db.rs  error.rs  main.rs  models.rs  pipe.rs  response.rs  routes.rs  services.rs  single_instance.rs  utils.rs  websocket_manager.rs
taix-server/src/models/: app.rs  category.rs  category_summary.rs  config.rs  log.rs  request.rs  web.rs
taix-server/src/routes/: app_data.rs  app_timer.rs  category.rs  category_summary.rs  config.rs  data.rs  health.rs  web_data.rs  web_sentry.rs
taix-server/src/services/: app_data.rs  app_timer.rs  category.rs  category_summary.rs  config.rs  data.rs  web_data.rs
taix-shell/: Cargo.toml
taix-shell/resources/icons/: taix.icns
taix-shell/src/: client.rs  config.rs  constants.rs  i18n.rs  main.rs  runner.rs  service_manager.rs
taix-shell/src/platform/: mod.rs
taix-shell/src/platform/macos/: mod.rs  scheduler.rs  single_instance.rs  tray.rs
taix-shell/src/platform/unix/: mod.rs  scheduler.rs
taix-shell/src/platform/windows/: autostart.rs  job_object.rs  mod.rs  scheduler.rs  single_instance.rs  tray.rs
(+562 files in other folders)
