[package]
name = "taix-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
xz2 = "0.1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
