[package]
name = "taix-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
sevenz-rust2 = { version = "0.21", features = ["util"] }
anyhow = "1"
dirs = "5"
console = "0.15"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
