[package]
name = "taix-installer"
version = "0.2.0"
edition = "2021"

[features]
default = ["gui"]
gui = []
cli = []

[dependencies]
tao = "0.30"
wry = "0.48"
sevenz-rust2 = { version = "0.21", features = ["util"] }
anyhow = "1"
dirs = "5"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Globalization",
]}

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true