[package]
name = "taix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "fs", "io-util", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "sqlite", "runtime-tokio", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
taix-logging = { path = "../taix-logging" }
anyhow = "1"
thiserror = "2"
dirs = "5"
attohttpc = { version = "0.28", default-features = false, features = ["tls-native"] }
resvg = { version = "0.47", default-features = false }
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
